[package]
name = "binja_patterns"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
python = []

[dependencies]
tracing = "0.1.44"
static_init = "1.0.3"

[dependencies.patterns]
git = "https://github.com/greaka/patterns.git"

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module", "abi3-py310"]

[dependencies.binaryninja]
git = "https://github.com/Vector35/binaryninja-api.git"
# branch = master

[dependencies.binaryninjacore-sys]
git = "https://github.com/Vector35/binaryninja-api.git"
# branch = master
